Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39934

OS X: Special menu items (Cut, Copy, Paste, Select all) can't be renamed

XMLWordPrintable

    • macOS
    • 8c538d10da618add00aba1acbc8d8dc2f24445b4

      Renaming special menu items (Cut, Copy, Paste, Select all) with QAction::setText() adds new menu items to menu instead of renaming the existing ones.

      Steps to reproduce:

      • Run the attached example application
      • Edit menu has "Cut", "Copy", "Paste", "Select All", "Start Dictation", "Special Characters"
      • Click on the "Update edit menu" button
      • Edit menu has "Cut", "Copy", "Paste", "Select All", "Start Dictation", "Special Characters", "Cut modified", "Copy modified", "Paste modified", "Select All modified"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.graphics.and.multimedia Qt Graphics Team
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes